fixing horizontal scroll on mobile

--- a/main.css
+++ b/main.css
@@ -11,7 +11,16 @@
     src: url('assets/acumin.otf'); 
 } 
 
+html, body {
+    overflow-x: hidden;
+  }
+
+  body {
+    position: relative
+  }
+
 body{
+    position: relative;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
